# BlenderDev

./: .gitignore  CMakeLists.txt  CMakeLists.txt.mine  CMakeLists.txt.r38759  Ccontroller.patch  GNUmakefile  README.txt  SConstruct  temp patch.patch
build_files/buildbot/: master.cfg  master_unpack.py  slave_compile.py  slave_pack.py  slave_test.py
build_files/buildbot/config/: user-config-i686.py  user-config-player-i686.py  user-config-player-x86_64.py  user-config-x86_64.py
build_files/cmake/: RpmBuild.cmake  buildinfo.cmake  cmake_consistency_check.py  cmake_consistency_check_config.py  cmake_netbeans_project.py  cmake_qtcreator_project.py  macros.cmake  packaging.cmake  project_info.py
build_files/cmake/Modules/: FindGLEW.cmake  FindJack.cmake  FindJeMalloc.cmake  FindOpenCOLLADA.cmake  FindOpenEXR.cmake  FindOpenJPEG.cmake  FindPythonLibsUnix.cmake  FindSamplerate.cmake
build_files/cmake/config/: blender_headless.cmake  blender_lite.cmake  bpy_module.cmake
build_files/cmake/example_scripts/: cmake_linux_install.sh  make_quicky.py
build_files/package_spec/: build_archive.py
build_files/package_spec/debian/: control
build_files/package_spec/pacman/: PKGBUILD
build_files/package_spec/rpm/: blender.spec.in
build_files/scons/config/: aix4-config.py  darwin-config.py  freebsd7-config.py  freebsd8-config.py  freebsd9-config.py  irix6-config.py  linux-config.py  linux2-config.py  linuxcross-config.py  openbsd3-config.py  sunos5-config.py  win32-mingw-config.py  win32-vc-config.py  win64-vc-config.py
build_files/scons/tools/: Blender.py  bcolors.py  (+3 more)
doc/blender_file_format/: BlendFileDnaExporter_25.py  BlendFileReader.py  README  mystery_of_the_blend.html
doc/build_systems/: cmake.txt  scons-dev.txt  scons.txt
doc/doxygen/: Doxyfile  doxygen.extern  doxygen.intern  doxygen.main  doxygen.source
doc/guides/: interface_API.txt
doc/license/: bf-members.txt
doc/manpage/: blender.1  blender.1.py
doc/python_api/: sphinx_changelog_gen.py  sphinx_doc_gen.py  sphinx_doc_gen.sh  sphinx_html_compact.diff
intern/: CMakeLists.txt  SConscript
intern/audaspace/: CMakeLists.txt  SConscript
intern/boolop/: CMakeLists.txt  SConscript
intern/bsp/: CMakeLists.txt  SConscript
intern/container/: CMakeLists.txt  CTR_HashedPtr.h  CTR_List.h  CTR_Map.h  CTR_TaggedIndex.h  CTR_TaggedSetOps.h  CTR_UHeap.h  SConscript
intern/decimation/: CMakeLists.txt  SConscript
intern/elbeem/: CMakeLists.txt  SConscript
intern/ffmpeg/: ffmpeg_compat.h
intern/ghost/: CMakeLists.txt  GHOST_C-api.h  GHOST_IEvent.h  GHOST_IEventConsumer.h  GHOST_ISystem.h  GHOST_ISystemPaths.h  GHOST_ITimerTask.h  GHOST_IWindow.h  GHOST_Path-api.h  GHOST_Rect.h  GHOST_Types.h  SConscript
intern/guardedalloc/: CMakeLists.txt  MEM_guardedalloc.h  MEM_sys_types.h  SConscript  mmap_win.h
intern/iksolver/: CMakeLists.txt  SConscript
intern/itasc/: Armature.cpp  Armature.hpp  CMakeLists.txt  Cache.cpp  Cache.hpp  ConstraintSet.cpp  ConstraintSet.hpp  ControlledObject.cpp  ControlledObject.hpp  CopyPose.cpp  CopyPose.hpp  Distance.cpp  Distance.hpp  FixedObject.cpp  FixedObject.hpp  MovingFrame.cpp  MovingFrame.hpp  Object.hpp  SConscript  Scene.cpp  Scene.hpp  Solver.hpp  UncontrolledObject.cpp  UncontrolledObject.hpp  WDLSSolver.cpp  WDLSSolver.hpp  WSDLSSolver.cpp  WSDLSSolver.hpp  WorldObject.cpp  WorldObject.hpp  eigen_types.cpp  eigen_types.hpp
intern/memutil/: CMakeLists.txt  MEM_Allocator.h  MEM_CacheLimiter.h  MEM_CacheLimiterC-Api.h  MEM_NonCopyable.h  MEM_RefCountPtr.h  MEM_RefCounted.h  MEM_RefCountedC-Api.h  MEM_SmartPtr.h  SConscript
intern/mikktspace/: CMakeLists.txt  SConscript  mikktspace.c  mikktspace.h
intern/moto/: CMakeLists.txt  SConscript
intern/opennl/: CMakeLists.txt  SConscript
intern/smoke/: CMakeLists.txt  SConscript
intern/string/: CMakeLists.txt  SConscript  STR_HashedString.h  STR_String.h
intern/tools/: bpy_introspect_ui.py  credits_svn_gen.py  dump_rna2xml.py  pydna.py  ui_snapshot.py
po/: ar.po  bg.po  ca.po  cs.po  de.po  es.po  fi.po  fr.po  hr.po  it.po  ja.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sr.po  sr@Latn.po  sv.po  uk.po  zh_CN.po
release/: environment-macosx  environment-unix
release/datafiles/: LICENSE-bfont.ttf.txt  ctodata.py  datatoc.py
release/freedesktop/: blender.desktop
release/irix-6.2-mips/: specific.sh
release/text/: readme.html
scons/: scons-LICENSE  scons-README  scons-time.py  scons.py  sconsign.py
source/: CMakeLists.txt  SConscript
source/blender/: CMakeLists.txt  SConscript
source/blenderplayer/: CMakeLists.txt
source/creator/: CMakeLists.txt  SConscript  buildinfo.c  creator.c
source/gameengine/: CMakeLists.txt  SConscript
source/gameengine/CModules/Example/: BGE_TestModule.cpp  BGE_TestModule.h  CMakeLists.txt  SConscript
source/icons/: SConscript
source/tests/: CMakeLists.txt  batch_import.py  bl_load_addons.py  bl_load_py_modules.py  bl_run_operators.py  bl_test.py  check_deprecated.py  pep8.py  rna_array.py  rna_info_dump.py
source/tools/: MakeCursor.py  MakeGLStipple.py
(+3121 files in other folders)
